// Vitest Snapshot v1

exports[`Popup > Popup baseVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-70969ba8=""
>
  
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-70969ba8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      顶部弹出
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-70969ba8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      左侧弹出
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-70969ba8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      中间弹出
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-70969ba8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      底部弹出
      
    </span>
  </button>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-70969ba8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      右侧弹出
      
    </span>
  </button>
  
  
  <transition-stub
    appear="false"
    css="true"
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`Popup > Popup customCloseVue demo works fine 1`] = `
<div
  class="popup-demo"
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      居中弹出层-带自定义关闭按钮
      
    </span>
  </button>
  
  <transition-stub
    appear="false"
    css="true"
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`Popup > Popup mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-c2ceb286=""
>
  <h1
    class="title"
    data-v-c2ceb286=""
  >
    Popup 弹窗层
  </h1>
  <p
    class="summary"
    data-v-c2ceb286=""
  >
    由其他控件触发，屏幕滑出或弹出一块自定义内容区域
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-c2ceb286=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础弹出层
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-70969ba8=""
        data-v-c2ceb286=""
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-70969ba8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            顶部弹出
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-70969ba8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            左侧弹出
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-70969ba8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            中间弹出
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-70969ba8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            底部弹出
            
          </span>
        </button>
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-70969ba8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            右侧弹出
            
          </span>
        </button>
        
        
        <transition-stub
          appear="false"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-c2ceb286=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件示例
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        应用示例
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="popup-demo"
        data-v-099d70a8=""
        data-v-c2ceb286=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          data-v-099d70a8=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            底部弹出层-带标题及操作
            
          </span>
        </button>
        
        <transition-stub
          appear="false"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      <div
        class="popup-demo"
        data-v-c2ceb286=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            居中弹出层-带自定义关闭按钮
            
          </span>
        </button>
        
        <transition-stub
          appear="false"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        <!--teleport start-->
        <!--teleport end-->
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Popup > Popup withTitleVue demo works fine 1`] = `
<div
  class="popup-demo"
  data-v-099d70a8=""
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--primary t-button--shape-rectangle t-is-block"
    data-v-099d70a8=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      底部弹出层-带标题及操作
      
    </span>
  </button>
  
  <transition-stub
    appear="false"
    css="true"
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;
